# vkvg_minimal_app

./: CMakeLists.txt  README.md
cmake/: Findvkh.cmake  Findvkvg.cmake
src/: main.c  vkengine.c  vkengine.h
