cmake_minimum_required(VERSION 2.4)

project(vkvg_minimal_app)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(vkvg REQUIRED)
FIND_PACKAGE(vkh REQUIRED)
FIND_PACKAGE(Vulkan REQUIRED)
FIND_PACKAGE(GLFW3 REQUIRED)

FILE(GLOB sources src/*.c)

add_executable(app ${sources})

TARGET_INCLUDE_DIRECTORIES(app PRIVATE
	${Vulkan_INCLUDE_DIRS}
	${vkvg_INCLUDE_DIRS}
	${vkh_INCLUDE_DIRS}
	${GLFW3_INCLUDE_DIR}
)
TARGET_LINK_LIBRARIES(app
	${Vulkan_LIBRARIES}
	${vkvg_LIBRARIES}
	${vkh_LIBRARIES}
	${GLFW3_LIBRARY}
)

